# gmat-copilot

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  THIRD-PARTY-NOTICES  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml  prompt-miss.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
corpus/: index.html
corpus/domain-notes/: gotcha-hardware-not-reportable.md  gotcha-literal-initialization.md  gotcha-logical-conditions.md  gotcha-naming-and-references.md  gotcha-parameter-dependencies.md  gotcha-unknown-field-type-enum.md  intent-ephemeris-and-reporting.md  intent-finite-burn.md  intent-impulsive-maneuver.md  intent-orbit-state-and-regimes.md  intent-orbit-transfer-target.md  intent-propagation-stopping-conditions.md  intent-station-keeping.md  intent-sun-synchronous-orbit.md  intent-visualization.md  semantics-coordinate-systems.md  semantics-force-model-composition.md  semantics-propagator-selection.md  semantics-state-representations.md  semantics-time-systems.md
decisions/: index.html
docs/: api.md  corpus.md  decisions.md  evaluation.md  getting-started.md  index.md  leaderboard.md  output-schema.md  provenance.md  providers.md  repair.md  validation.md  vscode.md
docs/design/: decisions.md
docs/design/spikes/: v1_corpus_proof.py  v2-validation-coverage.md  v2_validation_proof.py  v3-eval-protocol.md  v3_eval_proof.py  v3_judge_fixtures.json  v4-provider-abstraction.md  v4_provider_fixtures.json  v4_provider_proof.py  v5-close-the-loop.md  v5_close_loop_proof.py  v6-vscode-surface.md  v6_vscode_fixtures.json  v6_vscode_surface_proof.py  v7-leaderboard.md  v7_leaderboard_proof.py
docs/examples/: add-a-provider.md  close-the-loop.md  hohmann.md  in-vscode.md  read-the-provenance.md  reproduce-a-leaderboard-entry.md  reproduce-the-eval.md
editors/vscode/: .vscode-test.mjs  .vscodeignore  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  worker.ts
evaluation/: index.html
examples/add-a-provider/: index.html
examples/close-the-loop/: index.html
examples/hohmann/: index.html
examples/in-vscode/: index.html
examples/read-the-provenance/: index.html
examples/reproduce-a-leaderboard-entry/: index.html
examples/reproduce-the-eval/: index.html
getting-started/: index.html
leaderboard/: HOSTING.md  index.html  leaderboard.json  seeds.json
leaderboard/space/: README.md  board.js  index.html  style.css
leaderboard/tools/: author_heldout.py
output-schema/: index.html
provenance/: index.html
providers/: index.html
repair/: index.html
search/: search_index.json
spikes/: v1-corpus-and-index.md
src/gmat_copilot/: __init__.py  _dryrun_worker.py  cli.py  dryrun.py  generate.py  provenance.py  repair.py  result.py  validate.py  worker.py
src/gmat_copilot/eval/: __init__.py  judge.py  leaderboard.py  lift.py  prompts.py  runner.py  scorer.py
src/gmat_copilot/providers/: __init__.py
src/gmat_copilot/rag/: __init__.py  build.py  embed.py  loader.py  retriever.py  schema.py
tests/: conftest.py  test_cli.py  test_dryrun.py  test_dryrun_gmat.py  test_eval_judge.py  test_eval_lift.py  test_eval_lift_gmat.py  test_eval_prompts.py  test_eval_runner.py  test_eval_scorer.py  test_eval_smoke.py  test_generate.py  test_import.py  test_leaderboard.py  test_leaderboard_space.py  test_provenance.py  test_providers.py  test_rag_build.py  test_rag_embed.py  test_rag_loader.py  test_rag_retriever.py  test_repair.py  test_repair_gmat.py  test_result.py  test_validate.py  test_worker.py
tests/data/: hallucinated_field.script  hallucinated_resource.script  invalid.script
validation/: index.html
vscode/: index.html
(+47 files in other folders)
