[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmat-copilot"
description = "Model-agnostic natural-language → GMAT mission-script generation, retrieval-grounded and lint-validated."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES"]
authors = [{ name = "Dimitrije Jankovic" }]
keywords = [
  "gmat",
  "llm",
  "code-generation",
  "rag",
  "astrodynamics",
  "mission-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "gmat-script>=0.3",
  "sentence-transformers>=3",
  "faiss-cpu>=1.8",
  "numpy>=1.26",
]
dynamic = ["version"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
ollama = ["ollama>=0.3"]
gmat = ["gmat-run>=0.6"]

[project.scripts]
gmat-copilot = "gmat_copilot.cli:main"

[project.urls]
Homepage = "https://github.com/astro-tools/gmat-copilot"
Repository = "https://github.com/astro-tools/gmat-copilot"
Issues = "https://github.com/astro-tools/gmat-copilot/issues"
Documentation = "https://astro-tools.github.io/gmat-copilot/"
Changelog = "https://github.com/astro-tools/gmat-copilot/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[tool.hatch.version]
path = "src/gmat_copilot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gmat_copilot"]

[tool.hatch.build.targets.sdist]
include = [
  "src/gmat_copilot",
  "corpus/domain-notes",
  "tests",
  "docs",
  "mkdocs.yml",
  "README.md",
  "LICENSE",
  "THIRD-PARTY-NOTICES",
  "CHANGELOG.md",
  "CITATION.cff",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# The prerequisite-spike proof scripts are reference artefacts, not project source.
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/gmat_copilot", "tests"]

[[tool.mypy.overrides]]
module = [
  "sentence_transformers.*",
  "faiss.*",
  "anthropic.*",
  "openai.*",
  "ollama.*",
  "gmat_run.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "eval_smoke: the deterministic recorded-provider eval-smoke (no model calls).",
]

[tool.coverage.run]
source = ["src/gmat_copilot"]
branch = true

[tool.coverage.report]
show_missing = true
# Machine-enforce the charter DoD's coverage floor. The CI test job runs with --cov, so this gate
# fails the build on a regression. Validation and the eval-scoring layer sit individually at
# 98-100% (the DoD's >=95% tier); this overall floor locks in the integrated surface.
fail_under = 90
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
  "^\\s*\\.\\.\\.$",
  "if __name__ == .__main__.:",
]
